--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,9 +20,48 @@
           <% if @book.user == current_user %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+          <% else %>
+            <% if @book.favorited_by?(current_user) %>
+          <td>
+            <%= link_to book_favorites_path(@book), class: "fas fa-heart text-danger", method: :delete do %><%= @book.favorites.count %>
+            <% end %>
+          </td>
+          <td><span>コメント数:</span><%= @book.book_comments.count %></td>
+            <% else %>
+          <td>
+            <%= link_to book_favorites_path(@book), class: "fas fa-heart text-primary", method: :post do %><%= @book.favorites.count %>
+            <% end %>
+          </td>
+          <td><span>コメント数:</span><%= @book.book_comments.count %></td>
+            <% end %>
           <% end %>
         </tr>
       </table>
+      <table class='table table-hover table-inverse'>
+        <tbody>
+          <% @book.book_comments.each do |book_comment| %>
+            <tr>
+              <td><%= link_to user_path(book_comment.user) do %>
+                <%= attachment_image_tag(book_comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %>
+                <% end %>
+                <%= link_to book_comment.user.name ,user_path(book_comment.user) %>
+              </td>
+              <td><%= book_comment.comment %></td>
+              <% if book_comment.user == current_user %>
+              <td><%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), class: "btn btn-danger", method: :delete %></td>
+              <% end %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+      <div class="form-group">
+        <textarea class="form-control" name="book_comment[comment]" id="book_comment_comment" rows="5"></textarea>
+      </div>
+      <div class="form-group">
+        <input type="submit" class="btn btn-secondary" name="commit" value="送信" data-disable-with="送信">
+      </div>
+      <% end %>
     </div>
   </div>
 </div>
