--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -39,27 +39,27 @@
       </table>
       <table class='table table-hover table-inverse'>
         <tbody>
-          <% @book.book_comments.each do |book_comment| %>
+          <% @book.book_comments.each do |comment| %>
             <tr>
-              <td><%= link_to user_path(book_comment.user) do %>
-                <%= attachment_image_tag(book_comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %>
+              <td><%= link_to user_path(comment.user) do %>
+                <%= attachment_image_tag(comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %>
                 <% end %>
-                <%= link_to book_comment.user.name ,user_path(book_comment.user) %>
+                <%= link_to comment.user.name ,user_path(comment.user) %>
               </td>
-              <td><%= book_comment.comment %></td>
-              <% if book_comment.user == current_user %>
-              <td><%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), class: "btn btn-danger", method: :delete %></td>
+              <td><%= comment.comment %></td>
+              <% if comment.user == current_user %>
+              <td><%= link_to "Destroy", book_book_comment_path(comment.book, comment), class: "btn btn-danger", method: :delete %></td>
               <% end %>
             </tr>
           <% end %>
         </tbody>
       </table>
-      <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+      <%= form_with model:[@book, @book_comment], local: true do |f| %>
       <div class="form-group">
-        <textarea class="form-control" name="book_comment[comment]" id="book_comment_comment" rows="5"></textarea>
+        <%= f.text_area :comment, row:'5', class: "form-control" %>
       </div>
       <div class="form-group">
-        <input type="submit" class="btn btn-secondary" name="commit" value="送信" data-disable-with="送信">
+        <%= f.submit "送信", class: "btn btn-secondary" %>
       </div>
       <% end %>
     </div>
