--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info', user:@user %>
+      <%= render 'users/info', user: @user %>
       <h2 class="mt-3">New book</h2>
       <%= render 'layouts/form', book: @book_new %>
     </div>
@@ -55,6 +55,17 @@
         </tbody>
       </table>
       <%= form_with model:[@book, @book_comment], local: true do |f| %>
+      <% if @error_comment.present? %>
+        <div id="error_explanation", class="text-danger">
+        <h2><%= @error_comment.errors.count %> errors prohibited this book from being saved:</h2>
+          <ul>
+            <% @error_comment.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
       <div class="form-group">
         <%= f.text_area :comment, row:'5', class: "form-control" %>
       </div>
