--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,8 +8,32 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th><%= link_to user.followings.count, following_path %></th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th><%= link_to user.followers.count, followers_path %></th>
+  </tr>
 </table>
+<% if user == current_user %>
+  <div class='row'>
+    <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  </div>
+  <% else %>
+  <div>
+    <% if current_user.following?(user) %>
+      <%= form_with model: current_user.relationships.find_by(follower_id: user.id), method: :delete, local: true do |f| %>
+        <%= hidden_field_tag :follow_id, user.id %>
+        <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
+      <% end %>
+    <% else %>
+      <%= form_with model: current_user.relationships.build, local: true do |f| %>
+        <%= hidden_field_tag :follow_id, user.id %>
+        <%= f.submit 'Follow', class: 'btn btn-primary btn-block' %>
+      <% end %>
+    <% end %>
+  </div>
+  <% end %>
 
-<div class='row'>
-  <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
-</div>
