--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,11 +10,11 @@
   </tr>
   <tr>
     <th>follows</th>
-    <th><%= link_to user.followings.count, following_path %></th>
+    <th><%= link_to user.followings.count, following_path(user_id: user.id) %></th>
   </tr>
   <tr>
     <th>followers</th>
-    <th><%= link_to user.followers.count, followers_path %></th>
+    <th><%= link_to user.followers.count, followers_path(user_id: user.id) %></th>
   </tr>
 </table>
 <% if user == current_user %>
@@ -25,12 +25,12 @@
   <div>
     <% if current_user.following?(user) %>
       <%= form_with model: current_user.relationships.find_by(follower_id: user.id), method: :delete, local: true do |f| %>
-        <%= hidden_field_tag :follow_id, user.id %>
+        <%= hidden_field_tag :user_id, user.id %>
         <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
       <% end %>
     <% else %>
       <%= form_with model: current_user.relationships.build, local: true do |f| %>
-        <%= hidden_field_tag :follow_id, user.id %>
+        <%= hidden_field_tag :user_id, user.id %>
         <%= f.submit 'Follow', class: 'btn btn-primary btn-block' %>
       <% end %>
     <% end %>
