--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,23 @@
       <tr>
         <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
+        <td><span>フォロー数:</span><%= user.followings.count %></td>
+        <td><span>フォロワー数:</span><%= user.followers.count %></td>
+        <td>
+          <% if user != current_user %>
+            <% if current_user.following?(user) %>
+              <%= form_with model: current_user.relationships.find_by(follower_id: user.id), method: :delete, local: true do |f| %>
+                <%= hidden_field_tag :user_id, user.id %>
+                <%= f.submit 'Unfollow', class: 'btn btn-danger btn-sm' %>
+              <% end %>
+            <% else %>
+              <%= form_with model: current_user.relationships.build, local: true do |f| %>
+                <%= hidden_field_tag :user_id, user.id %>
+                <%= f.submit 'Follow', class: 'btn btn-primary btn-sm' %>
+              <% end %>
+            <% end %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
