--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,15 +17,13 @@
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
         <% if book.favorited_by?(current_user) %>
-        <td>
-          <%= link_to book_favorites_path(book), class: "fas fa-heart text-danger", method: :delete do %><%= book.favorites.count %>
-          <% end %>
+        <td class="favorite-btn-<%= book.id %>">
+          <%= render 'favorites/favorite-btn-danger', book: book %>
         </td>
         <td><span>コメント数:</span><%= book.book_comments.count %></td>
         <% else %>
-        <td>
-          <%= link_to book_favorites_path(book), class: "fas fa-heart text-primary", method: :post do %><%= book.favorites.count %>
-          <% end %>
+        <td class="favorite-btn-<%= book.id %>">
+          <%= render 'favorites/favorite-btn-primary', book: book %>
         </td>
         <td><span>コメント数:</span><%= book.book_comments.count %></td>
         <% end %>
