--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,55 +17,32 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          <% if @book.user == current_user %>
-          <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
-          <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+          <% if @book.favorited_by?(current_user) %>
+            <td class="favorite-btn-<%= @book.id %>">
+              <%= render 'favorites/favorite-btn-danger', book: @book %>
+            </td>
+            <td class="comment-count"><%= render 'book_comments/comment-count', book: @book %></td>
           <% else %>
-            <% if @book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorites_path(@book), class: "fas fa-heart text-danger", method: :delete do %><%= @book.favorites.count %>
-            <% end %>
-          </td>
-          <td><span>コメント数:</span><%= @book.book_comments.count %></td>
-            <% else %>
-          <td>
-            <%= link_to book_favorites_path(@book), class: "fas fa-heart text-primary", method: :post do %><%= @book.favorites.count %>
-            <% end %>
-          </td>
-          <td><span>コメント数:</span><%= @book.book_comments.count %></td>
-            <% end %>
+            <td class="favorite-btn-<%= @book.id %>">
+              <%= render 'favorites/favorite-btn-primary', book: @book %>
+            </td>
+            <td class="comment-count"><%= render 'book_comments/comment-count', book: @book %></td>
+          <% end %>
+          <% if @book.user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
+            <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
       <table class='table table-hover table-inverse'>
-        <tbody>
-          <% @book.book_comments.each do |comment| %>
-            <tr>
-              <td><%= link_to user_path(comment.user) do %>
-                <%= attachment_image_tag(comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %>
-                <% end %>
-                <%= link_to comment.user.name ,user_path(comment.user) %>
-              </td>
-              <td><%= comment.comment %></td>
-              <% if comment.user == current_user %>
-              <td><%= link_to "Destroy", book_book_comment_path(comment.book, comment), class: "btn btn-danger", method: :delete %></td>
-              <% end %>
-            </tr>
-          <% end %>
+        <tbody class="comment">
+          <%= render 'book_comments/comment', book: @book %>
         </tbody>
       </table>
-      <%= form_with model:[@book, @book_comment], local: true do |f| %>
-      <% if @error_comment.present? %>
-        <div id="error_explanation", class="text-danger">
-        <h2><%= @error_comment.errors.count %> errors prohibited this book from being saved:</h2>
-          <ul>
-            <% @error_comment.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
-
+      <div  id="comment-error" >
+        <%= render 'book_comments/error', error_comment: @error_comment %>
+      </div>
+      <%= form_with model:[@book, @book_comment], remote: true do |f| %>
       <div class="form-group">
         <%= f.text_area :comment, row:'5', class: "form-control" %>
       </div>
