--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -15,7 +15,7 @@
           <% end %>
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
-        <td class="book-body"><%= render 'books/book-body', book: book %></td>
+        <td ><%= book.body %></td>
         <% if book.favorited_by?(current_user) %>
         <td class="favorite-btn-<%= book.id %>">
           <%= render 'favorites/favorite-btn-danger', book: book %>
