--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -28,6 +28,7 @@
         <%= hidden_field_tag :user_id, user.id %>
         <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
       <% end %>
+      <%= link_to 'DMをはじめる', chat_path(@user.id) %>
     <% else %>
       <%= form_with model: current_user.relationships.build, local: true do |f| %>
         <%= hidden_field_tag :user_id, user.id %>
