--- a/app/views/chats/create.js.erb
+++ b/app/views/chats/create.js.erb
@@ -1,2 +1,3 @@
-$('.chat-message').html("<%= escape_javascript(render partial: 'chats/chat-message', locals: {chats: @chats}) %>");
-$('textfield').val('');
+$('.message').append("<p style='text-align: left;'><%= @chat.message %></p>");
+$('.js-form')[0].reset();
+$('error-alert').empty();
