--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -2,20 +2,37 @@
   <div class="row">
     <div class="col-xs-6">
       <h2><%= @user.name %> さんとのチャット</h2>
-      <table class="message table-inverse">
+      <table class="message table">
         <thead>
           <tr>
             <th style="text-align: left; font-size: 20px;"><%= current_user.name %></th>
             <th style="text-align: right; font-size: 20px;"><%= @user.name %></th>
           </tr>
         </thead>
-        <tbody class="chat-message">
-          <%= render 'chats/chat-message', chats: @chats %>
-        </tbody>
+        <% @chats.each do |chat| %>
+          <% if chat.user_id == current_user.id %>
+          <tbody>
+            <tr>
+              <th>
+                <p style="text-align: left;"><%= chat.message %></p>
+              </th>
+              <th></th>
+            </tr>
+          <% else %>
+            <tr>
+              <th></th>
+              <th>
+                <p style="text-align: right;"><%= chat.message %></p>
+              </th>
+            </tr>
+          </tbody>
+          <% end %>
+        <% end %>
       </table>
-      <%= form_with model: @chat, remote: true do |f| %>
+
+      <%= form_with model: @chat, class: "js-form" do |f| %>
       <div class="form-group">
-        <%= f.text_field :message, class: "form-control" %>
+        <%= f.text_field :message %>
       </div>
       <div class="form-group">
         <%= f.hidden_field :room_id %>
@@ -24,6 +41,7 @@
         <%= f.submit "SEND", class: "btn btn-sm btn-success" %>
       </div>
       <% end %>
+      <div class="error-alert"></div>
     </div>
   </div>
 </div>
