--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -26,13 +26,13 @@
     <% if current_user.following?(user) %>
       <%= form_with model: current_user.relationships.find_by(follower_id: user.id), method: :delete, local: true do |f| %>
         <%= hidden_field_tag :user_id, user.id %>
-        <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
+        <%= f.submit 'フォローを外す', class: 'btn btn-danger btn-block' %>
       <% end %>
       <%= link_to 'DMをはじめる', chat_path(@user.id) %>
     <% else %>
       <%= form_with model: current_user.relationships.build, local: true do |f| %>
         <%= hidden_field_tag :user_id, user.id %>
-        <%= f.submit 'Follow', class: 'btn btn-primary btn-block' %>
+        <%= f.submit 'フォローする', class: 'btn btn-success btn-block' %>
       <% end %>
     <% end %>
   </div>
