--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -28,7 +28,9 @@
         <%= hidden_field_tag :user_id, user.id %>
         <%= f.submit 'フォローを外す', class: 'btn btn-danger btn-block' %>
       <% end %>
-      <%= link_to 'DMをはじめる', chat_path(@user.id) %>
+      <% if user.following?(current_user) %>
+        <%= link_to 'DMをはじめる', chat_path(user.id) %>
+      <% end %>
     <% else %>
       <%= form_with model: current_user.relationships.build, local: true do |f| %>
         <%= hidden_field_tag :user_id, user.id %>
